--- a/src/templates/menu.hbs
+++ b/src/templates/menu.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-        <div class="menu-item">
+        <div class="menu-item" style="margin-right: 20px;">
             <p>Ім'я студента: {{name}}</p>
             <p>Вік: {{age}}</p>
             <p>Клас: {{grade}}</p>
